Stop blurring text on iPhone 4.

--- a/css/_ui.less
+++ b/css/_ui.less
@@ -21,6 +21,7 @@ body {
 }
 
 div {
+  -webkit-transform-style:preserve-3d;
   -webkit-perspective:1000px;
   -webkit-backface-visibility: hidden;
 }
@@ -31,6 +32,9 @@ div {
   border:0px solid #55819A;
   position: absolute;
   height:100%;
+  -webkit-transform-style:preserve-3d;
+  -webkit-perspective:1000px;
+  -webkit-backface-visibility: hidden;
   width:100%;
   .box-sizing;
     .content {
